src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

ul {
  @apply list-disc list-inside text-sm;
}

h1 {
  @apply text-lg;
}

h2 {
  @apply text-lg;
}

h3 {
  @apply text-base;
}

p {
  @apply text-sm;
}

@layer components {
  .title {
    @apply my-2 text-green-800 underline underline-offset-4 font-mono flex items-center gap-2;
  }
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
}

